移动端自适应

--- a/src/assets/stylus/index.styl
+++ b/src/assets/stylus/index.styl
@@ -3,7 +3,8 @@
 
 html {
   box-sizing: border-box;
-  font-size: 60px!important;
+  font-size: 28px;
+  // font-size: 60px!important;
 }
 
 * {
@@ -19,6 +20,7 @@ html {
 }
 
 body {
+  font-size: 28px;
   overflow-x: hidden;
   overflow-y: auto;
 }
