feat: button组件、路由配置

--- a/src/assets/stylus/index.styl
+++ b/src/assets/stylus/index.styl
@@ -1,101 +1,4 @@
-// Reboot
-// --------------------------------------------------
-
-html {
-  box-sizing: border-box;
-  font-size: 28px;
-  // font-size: 60px!important;
-}
-
-* {
-  box-sizing: inherit;
-
-  &:before,
-  &:after {
-    box-sizing: inherit;
-  }
-  margin: 0px
-  padding: 0px
-  -webkit-tap-highlight-color: transparent
-}
-
-body {
-  font-size: 28px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 500;
-}
-
-hr {
-  border: 0;
-  border-top: $border;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-}
-
-input,
-textarea {
-  font-family: inherit;
-}
-
-textarea {
-  resize: vertical;
-}
-
-img { content: normal !important;}
-body {
-  margin: 0px;
-  padding: 0px;
-}
-
-@font-face {
-  font-family: 'iconfont';  /* project id 466032 */
-  src: url('//at.alicdn.com/t/font_466032_yenmqu2rhp.eot');
-  src: url('//at.alicdn.com/t/font_466032_yenmqu2rhp.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_466032_yenmqu2rhp.woff') format('woff'),
-  url('//at.alicdn.com/t/font_466032_yenmqu2rhp.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_466032_yenmqu2rhp.svg#iconfont') format('svg');
-}
-// .we-icon {
-//   direction: ltr;
-//   display: inline-block;
-//   font: normal normal normal 14px/1 "nisu";
-//   font-size: inherit;
-//   line-height: inherit;
-//   letter-spacing: normal;
-//   text-rendering: auto;
-//   text-transform: none;
-//   white-space: nowrap;
-//   overflow-wrap: normal;
-//   -webkit-font-feature-settings: "liga";
-//   -webkit-font-smoothing: antialiased;
-//   -moz-osx-font-smoothing: grayscale;
-
-//   &--apps::before {
-//     content: "\e605";
-//   }
-// }
-.iconfont{
-  font-family:"iconfont" !important;
-  font-size:16px;font-style:normal;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale;
-  &--texticon::before {
-    content: "\e605";
-  }
-}
+@import "variables";
+@import "reboot";
+@import "transitions";
+@import "ui";
