添加loading插件、字体图标库、vuex

--- a/src/assets/stylus/variables.styl
+++ b/src/assets/stylus/variables.styl
@@ -46,7 +46,7 @@ $background-color         = $body-background-color;
 $title-background-color   = #fbfbfb;
 
 $color-default = $gray-dark;
-$color-primary = #f94e54; // 主色调为红色
+$color-primary = #ff5a5f; // 主色调为红色
 $color-accent  = #35a2ff; // 辅色调为蓝色
 $color-success = #4cc53f; // 绿色
 $color-warning = #fba109; // 黄色
